fixed horizontal scrollbar problem

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 }
 /* header section area */
 .header-area{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: url(img/background.jpg) no-repeat center center / cover;
     background-attachment: fixed;
